<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_orientacaoPagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/orientacao_pagamento"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_informacaValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_orientacaoPagamento" />

    <TextView
        android:id="@+id/textView_precoCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView_informacaValor"
        app:layout_constraintTop_toBottomOf="@+id/textView_informacaValor"
        tools:text="R$" />

    <EditText
        android:id="@+id/editText_NumeroDoCartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:layout_margin="8dp"
        android:maxLength="12"
        android:hint="@string/numero_do_cartao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_precoCompra"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_mesCartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/mes"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/editText_cvc"
        app:layout_constraintStart_toStartOf="@id/editText_NumeroDoCartao"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_anoCartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/ano_cartao"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/editText_cvc"
        app:layout_constraintStart_toEndOf="@+id/editText_mesCartao"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:maxLength="3"
        android:hint="@string/cvc"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/editText_NumeroDoCartao"
        app:layout_constraintTop_toBottomOf="@+id/editText_NumeroDoCartao"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_nomeNoCartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/nome_no_cartao"
        android:digits="@string/mascara_nome_cartao"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_anoCartao"
        android:autofillHints="" />

    <Button
        android:id="@+id/botao_finalizar_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editText_nomeNoCartao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:background="@drawable/botao_realizar_pagamento"
        android:text="@string/finalizar_compra"
        android:textColor="@color/white"
        app:backgroundTint="@android:color/holo_orange_dark"
        />
</androidx.constraintlayout.widget.ConstraintLayout>