<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageView_resumoCompra_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/imagem_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/textView_resumoCompra_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parabens"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_resumoCompra_banner"
        app:layout_constraintEnd_toEndOf="@+id/imageView_resumoCompra_banner"
        app:layout_constraintStart_toStartOf="@+id/imageView_resumoCompra_banner"
        app:layout_constraintTop_toTopOf="@+id/imageView_resumoCompra_banner"
        app:layout_constraintVertical_bias="0.32999998" />

    <TextView
        android:id="@+id/textView_resumoCompra_compraRealizada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compra_realizada_com_sucesso"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView_resumoCompra_parabens"
        app:layout_constraintStart_toStartOf="@id/textView_resumoCompra_parabens"
        app:layout_constraintTop_toBottomOf="@id/textView_resumoCompra_parabens"
        app:layout_constraintVertical_bias="0.39999998" />

    <TextView
        android:id="@+id/textView_resumoCompra_confiraCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/confira_o_resuma_da_compra"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_resumoCompra_banner" />

    <ImageView
        android:id="@+id/imageView_resumoCompra_pacoteLocal"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagem_local"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_resumoCompra_confiraCompra"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_resumoCompra_localPacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_resumoCompra_pacoteLocal"
        tools:text="Sao Paulo" />

    <TextView
        android:id="@+id/textView_resumoCompra_periodoPacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView_resumoCompra_localPacote"
        app:layout_constraintTop_toBottomOf="@+id/textView_resumoCompra_localPacote"
        tools:text="08/12 - 10/12 de 2021" />

    <TextView
        android:id="@+id/textView_resumoCompra_valorResumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView_resumoCompra_periodoPacote"
        app:layout_constraintTop_toBottomOf="@+id/textView_resumoCompra_periodoPacote"
        tools:text="R$ 243.99" />
</androidx.constraintlayout.widget.ConstraintLayout>