<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!-- ____________________________________________________________________________________________ -->
    <!-- ____________________________________________________________________________________________ -->
    <ImageView
        android:id="@+id/imageViewBanner"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/purple_200"
        android:contentDescription="@string/imagem_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@color/purple_200" />
    <!-- ____________________________________________________________________________________________ -->
    <TextView
        android:id="@+id/textview_especiais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/especiais"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBanner"
        app:layout_constraintEnd_toEndOf="@+id/imageViewBanner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewBanner"
        app:layout_constraintTop_toTopOf="@+id/imageViewBanner"
        app:layout_constraintVertical_bias="0.0" />
    <!-- ____________________________________________________________________________________________ -->
    <TextView
        android:id="@+id/textview_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="@string/brasil"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textview_especiais"
        app:layout_constraintTop_toBottomOf="@+id/textview_especiais" />
    <!-- ____________________________________________________________________________________________ -->
    <ListView
        android:id="@+id/listview_pacotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBanner"
        app:layout_constraintBottom_toBottomOf="parent"
        android:divider="@null"
        android:dividerHeight="0dp"

        tools:listitem="@layout/item_pacote"
        />
    <!-- ____________________________________________________________________________________________ -->
</androidx.constraintlayout.widget.ConstraintLayout>